redis config with some service